--- a/Afterdeath/translations/English.yml
+++ b/Afterdeath/translations/English.yml
@@ -5,3 +5,4 @@ ad_skathi_hover_name: "Skathi"
 ad_skathi_hover_text: "Respawn here"
 ad_se_ghost: "Spirit world"
 ad_se_ghost_description: "You have died and are currently in the spirit world. Return to your corpse or talk to Skathi, to return to the world of the living."
+ad_tombstone_picked_up: "Tombstone picked up, take it to an explored shore to respawn"
