added new stuff and fixed some other stuff

--- a/Afterdeath/translations/English.yml
+++ b/Afterdeath/translations/English.yml
@@ -1,8 +1,11 @@
 ad_respawning: "Respawning"
 ad_skathi_interact_title: "Respawn here"
 ad_skathi_interact_message: "If you choose to let Skathi revive you, you will have to recover your tombstone in the world of the living."
+ad_skathi_interact_title_alt: "Respawn in bed"
+ad_skathi_interact_message_alt: "Are you sure that Skathi should teleport you to your bed?"
 ad_skathi_hover_name: "Skathi"
 ad_skathi_hover_text: "Respawn here"
+ad_skathi_hover_text_alt: "Respawn in bed"
 ad_se_ghost: "Spirit world"
 ad_se_ghost_description: "You have died and are currently in the spirit world. Return to your corpse or talk to Skathi, to return to the world of the living."
 ad_tombstone_picked_up: "Tombstone picked up, take it to an explored shore to respawn"
