new config options and small improvements

--- a/Afterdeath/translations/English.yml
+++ b/Afterdeath/translations/English.yml
@@ -9,3 +9,4 @@ ad_skathi_hover_text_alt: "Respawn in bed"
 ad_se_ghost: "Spirit world"
 ad_se_ghost_description: "You have died and are currently in the spirit world. Return to your corpse or talk to Skathi, to return to the world of the living."
 ad_tombstone_picked_up: "Tombstone picked up, take it to an explored shore to respawn"
+ad_skathi_interact_tombstone: "You cannot interact with Skathi, while carrying your tombstone."
